[package]
name = "temp_conversion_cli"
version = "0.2.0"
authors = ["Élodie Langevin <elodielangevin00@gmail.com>"]
description = """
CLI utilities for converting temperature unit, from metric to imperial and vice-versa.
Added support for kelvin
"""
keywords = ["temperature", "conversion"]
categories = ["command-line-utilities"]
license = "TODO"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }